--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -90,10 +90,11 @@
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:textAllCaps="false"
         android:background="@drawable/custom_button"
         android:backgroundTint="@color/color2"
         android:text="Get Started"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView4"
