--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_started"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
