--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -26,39 +26,38 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
+        android:id="@+id/Facebook"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        app:srcCompat="@drawable/facebook" />
+
+    <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="63dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:backgroundTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.09"
         app:srcCompat="@drawable/google" />
 
     <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="60dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="28dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:srcCompat="@drawable/facebook" />
-
-    <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="76dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="16dp"
         android:backgroundTintMode="add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="0.901"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:srcCompat="@drawable/twitter" />
 
@@ -103,54 +102,53 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/SignUp"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="327dp"
         android:layout_height="54dp"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="22dp"
         android:background="@drawable/custom_button"
         android:backgroundTint="@color/color2"
+        android:fontFamily="sans-serif"
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textColor="#F2ECF3"
-        android:textSize="34sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
+        app:layout_constraintTop_toBottomOf="@+id/Password" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="176dp"
         android:layout_height="27dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:text="Already have account ?"
         android:textColor="#ACACAC"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintEnd_toStartOf="@+id/Sign_in"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/Sign_in"
         android:layout_width="91dp"
         android:layout_height="26dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:text="Sign up"
         android:textColor="@color/color2"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/PersonName"
         android:layout_width="149dp"
         android:layout_height="52dp"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
@@ -159,16 +157,40 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/Email"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/Email"
+        android:layout_width="331dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/custom_input"
+        android:ems="10"
+        android:hint="   Email"
+        android:inputType="textEmailAddress"
+        android:textColorHint="#ACACAC"
+        app:layout_constraintStart_toStartOf="@+id/Password"
+        app:layout_constraintTop_toBottomOf="@+id/PersonName" />
+
+    <EditText
+        android:id="@+id/Password"
+        android:layout_width="331dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/custom_input"
+        android:ems="10"
+        android:hint="   password"
+        android:inputType="textPassword"
+        android:textColorHint="#ACACAC"
+        app:layout_constraintStart_toStartOf="@+id/SignUp"
+        app:layout_constraintTop_toBottomOf="@+id/Email" />
+
+    <EditText
+        android:id="@+id/LastName"
         android:layout_width="163dp"
         android:layout_height="54dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="30dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="last name"
@@ -176,44 +198,11 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
+        app:layout_constraintBottom_toBottomOf="@+id/PersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.027"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="331dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="13dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:hint=" Email"
-        android:inputType="textEmailAddress"
-        android:textColorHint="#ACACAC"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword2"
-        android:layout_width="331dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="13dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:hint=" password"
-        android:inputType="textPassword"
-        android:textColorHint="#ACACAC"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintHorizontal_bias="0.036"
+        app:layout_constraintStart_toEndOf="@+id/PersonName"
+        app:layout_constraintTop_toTopOf="@+id/PersonName" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
