--- a/app/src/main/res/layout-sw600dp-land/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_register.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/Facebook"
         android:layout_width="60dp"
         android:layout_height="52dp"
         android:layout_marginTop="12dp"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="72dp"
         android:backgroundTintMode="add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/Google"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:srcCompat="@drawable/twitter" />
 
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/PersonName"
         android:layout_width="277dp"
         android:layout_height="82dp"
         android:layout_marginStart="16dp"
@@ -119,7 +119,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/LastName"
         android:layout_width="256dp"
         android:layout_height="81dp"
         android:layout_marginStart="5dp"
@@ -134,11 +134,11 @@
         android:textColorHint="#ACACAC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.016"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
+        app:layout_constraintStart_toEndOf="@+id/PersonName"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/Email"
         android:layout_width="529dp"
         android:layout_height="65dp"
         android:layout_marginStart="26dp"
@@ -152,10 +152,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/PersonName" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/Password"
         android:layout_width="532dp"
         android:layout_height="64dp"
         android:layout_marginStart="26dp"
@@ -169,7 +169,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <TextView
         android:id="@+id/textView5"
@@ -181,12 +181,12 @@
         android:text="Already have account ?"
         android:textColor="#ACACAC"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintEnd_toStartOf="@+id/Sign_in"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/Sign_in"
         android:layout_width="91dp"
         android:layout_height="26dp"
         android:layout_marginStart="24dp"
@@ -195,10 +195,10 @@
         android:textColor="@color/color2"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/SignUp"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="421dp"
         android:layout_height="46dp"
@@ -214,7 +214,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.033"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
+        app:layout_constraintTop_toBottomOf="@+id/Password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
