--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,12 +36,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="147dp"
+        android:id="@+id/PersonName"
+        android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
@@ -50,18 +49,15 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/SignUp"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="327dp"
         android:layout_height="54dp"
-        android:layout_marginStart="26dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="22dp"
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif"
@@ -71,42 +67,25 @@
         android:textColor="#F2ECF3"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.388"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
+        app:layout_constraintTop_toBottomOf="@+id/Password" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/Email"
         android:layout_width="335dp"
         android:layout_height="48dp"
-        android:layout_marginStart="26dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="13dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint=" Email"
+        android:hint="   Email"
         android:inputType="textEmailAddress"
         android:textColorHint="#ACACAC"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.405"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="91dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="80dp"
-        android:backgroundTintMode="add"
-        android:text="Sign up"
-        android:textColor="@color/color2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.282"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/PersonName" />
 
     <TextView
         android:id="@+id/textView9"
@@ -127,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/Facebook"
         android:layout_width="60dp"
         android:layout_height="52dp"
         android:layout_marginStart="68dp"
@@ -136,28 +115,26 @@
         android:layout_marginBottom="40dp"
         android:backgroundTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView4"
+        app:layout_constraintEnd_toStartOf="@+id/Google"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:srcCompat="@drawable/facebook" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/Password"
         android:layout_width="335dp"
         android:layout_height="48dp"
-        android:layout_marginStart="26dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="13dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint=" password"
+        android:hint="   password"
         android:inputType="textPassword"
         android:textColorHint="#ACACAC"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.378"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <TextView
         android:id="@+id/textView5"
@@ -169,17 +146,31 @@
         android:textColor="#ACACAC"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.342"
+        app:layout_constraintHorizontal_bias="0.391"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+
+    <TextView
+        android:id="@+id/Sign_in"
+        android:layout_width="91dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="80dp"
+        android:backgroundTintMode="add"
+        android:text="Sign in"
+        android:textColor="@color/color2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.195"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="153dp"
+        android:id="@+id/LastName"
+        android:layout_width="160dp"
         android:layout_height="48dp"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
@@ -189,10 +180,10 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/Email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView7"
@@ -208,22 +199,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="63dp"
-        android:layout_height="54dp"
+        android:id="@+id/Google"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="40dp"
         android:backgroundTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
+        app:layout_constraintEnd_toStartOf="@+id/Twitter"
+        app:layout_constraintStart_toEndOf="@+id/Facebook"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:srcCompat="@drawable/google" />
 
     <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="76dp"
-        android:layout_height="57dp"
+        android:id="@+id/Twitter"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="68dp"
@@ -231,7 +222,7 @@
         android:backgroundTintMode="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/Google"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:srcCompat="@drawable/twitter" />
 
