--- a/app/src/main/res/layout-sw600dp/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp/activity_register.xml
@@ -10,8 +10,8 @@
     <EditText
         android:id="@+id/PersonName"
         android:layout_width="219dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="32dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="108dp"
         android:layout_marginTop="344dp"
         android:background="@drawable/custom_input"
         android:ems="10"
@@ -25,7 +25,7 @@
     <EditText
         android:id="@+id/Password"
         android:layout_width="531dp"
-        android:layout_height="82dp"
+        android:layout_height="60dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="13dp"
@@ -41,7 +41,7 @@
     <EditText
         android:id="@+id/Email"
         android:layout_width="527dp"
-        android:layout_height="92dp"
+        android:layout_height="60dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="13dp"
@@ -60,7 +60,7 @@
         android:layout_width="540dp"
         android:layout_height="63dp"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="22dp"
         android:background="@drawable/custom_button"
         android:backgroundTint="@color/color2"
@@ -69,13 +69,14 @@
         android:textColor="#F2ECF3"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.396"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Password" />
 
     <EditText
         android:id="@+id/LastName"
         android:layout_width="270dp"
-        android:layout_height="54dp"
+        android:layout_height="60dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="344dp"
         android:layout_marginEnd="30dp"
@@ -86,7 +87,7 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.386"
+        app:layout_constraintHorizontal_bias="0.202"
         app:layout_constraintStart_toEndOf="@+id/PersonName"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -97,10 +98,10 @@
         android:layout_marginStart="150dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="297dp"
-        android:fontFamily="sans-serif-condensed-medium"
+        android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="use other method"
-        android:textColor="@color/cardview_dark_background"
+        android:textColor="@color/black"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.356"
@@ -109,8 +110,8 @@
 
     <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="63dp"
-        android:layout_height="54dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="70dp"
@@ -122,8 +123,8 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="60dp"
-        android:layout_height="52dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_marginStart="150dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="70dp"
@@ -134,8 +135,8 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="76dp"
-        android:layout_height="57dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="150dp"
@@ -149,7 +150,7 @@
         android:id="@+id/textView5"
         android:layout_width="303dp"
         android:layout_height="54dp"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="156dp"
         android:layout_marginBottom="27dp"
         android:text="Already have account ?"
         android:textColor="#ACACAC"
