--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="color1">#3850B2</color>
     <color name="color2">#FF4F5A</color>
     <color name="color3">#EEF6FC</color>
+    <color name="color4">#FF7364</color>
+
 </resources>
