--- a/app/src/main/res/layout-land/activity_details_patient.xml
+++ b/app/src/main/res/layout-land/activity_details_patient.xml
@@ -25,6 +25,8 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:hint="Address"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
@@ -40,6 +42,8 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:hint="Name"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
@@ -55,6 +59,8 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:hint="Phone"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
@@ -70,6 +76,8 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:hint="Blood Type"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
