--- a/app/src/main/res/layout/activity_details_patient.xml
+++ b/app/src/main/res/layout/activity_details_patient.xml
@@ -12,6 +12,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/custominput"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textEmailAddress"
@@ -27,6 +29,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/custominput"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:ems="10"
         android:hint="Blood Type"
         android:inputType="textEmailAddress"
@@ -43,6 +47,8 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:hint="Phone"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
@@ -60,6 +66,8 @@
         android:ems="10"
         android:hint="Address"
         android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
