--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -178,6 +178,8 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:textSize="14sp"
@@ -193,6 +195,8 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
