--- a/app/src/main/res/layout-land/activity_details_patient.xml
+++ b/app/src/main/res/layout-land/activity_details_patient.xml
@@ -5,33 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button9"
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="313dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/textview"
+        android:textColor="@color/color2"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.169"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextEmailAddress13"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="13dp"
-        android:background="@drawable/custom_button"
-        android:text="@string/sub"
-        android:textColor="@color/color3"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/custominput"
+        android:ems="10"
+        android:hint=" Phone"
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.321"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress14" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress11" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress11"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:hint=" Address"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:hint="Address"
-        android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.321"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress12" />
 
@@ -39,89 +57,54 @@
         android:id="@+id/editTextTextEmailAddress12"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:hint=" Name"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:hint="Name"
-        android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.321"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView29" />
 
-    <EditText
-        android:id="@+id/editTextTextEmailAddress13"
+    <Button
+        android:id="@+id/button9"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/custominput"
-        android:ems="10"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:hint="Phone"
-        android:inputType="textEmailAddress"
-        android:textSize="14sp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/custom_button"
+        android:text="@string/sub"
+        android:textColor="@color/color3"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.321"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress11" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress14" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress14"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/custominput"
         android:ems="10"
+        android:hint=" Blood Type"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:hint="Blood Type"
-        android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.321"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress13" />
 
-    <TextView
-        android:id="@+id/textView29"
-        android:layout_width="313dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/textview"
-        android:textColor="@color/color2"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.289"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView31"
-        android:layout_width="297dp"
-        android:layout_height="202dp"
-        android:layout_marginStart="-90dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/unknown" />
-
-    <ImageView
-        android:id="@+id/imageView28"
-        android:layout_width="394dp"
-        android:layout_height="308dp"
-        android:layout_marginEnd="-80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/and" />
-
     <ImageView
         android:id="@+id/imageView29"
-        android:layout_width="245dp"
-        android:layout_height="210dp"
+        android:layout_width="344dp"
+        android:layout_height="281dp"
         android:layout_marginStart="110dp"
         android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,12 +117,13 @@
         android:id="@+id/textView24"
         android:layout_width="190dp"
         android:layout_height="29dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="112dp"
         android:text="Hi Patient .."
         android:textColor="@color/color2"
-        android:textSize="14sp"
+        android:textSize="16sp"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.911"
+        app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView29" />
 </androidx.constraintlayout.widget.ConstraintLayout>
