--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -31,12 +31,12 @@
         android:layout_height="52dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/facebook"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:srcCompat="@drawable/facebook" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/facebook"
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:layout_marginTop="14dp"
@@ -71,12 +71,12 @@
         android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/txt_forgot_password"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/register" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txt_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="384dp"
@@ -102,7 +102,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/SignUp"
+        android:id="@+id/btn_signup"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="327dp"
         android:layout_height="54dp"
@@ -122,7 +122,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Password" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txt_sign_up"
         android:layout_width="176dp"
         android:layout_height="27dp"
         android:layout_marginStart="80dp"
@@ -133,7 +133,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/Sign_in"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <TextView
         android:id="@+id/Sign_in"
@@ -142,8 +142,8 @@
         android:layout_marginTop="4dp"
         android:text="Sign up"
         android:textColor="@color/color2"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintStart_toEndOf="@+id/txt_sign_up"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <EditText
         android:id="@+id/PersonName"
@@ -183,7 +183,7 @@
         android:hint="   password"
         android:inputType="textPassword"
         android:textColorHint="#ACACAC"
-        app:layout_constraintStart_toStartOf="@+id/SignUp"
+        app:layout_constraintStart_toStartOf="@+id/btn_signup"
         app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <EditText
