--- a/app/src/main/res/layout-sw600dp-land/activity_forget_password.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_forget_password.xml
@@ -61,7 +61,7 @@
         app:layout_constraintVertical_bias="0.402" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/txt_new_password"
         android:layout_width="281dp"
         android:layout_height="53dp"
         android:layout_marginStart="10dp"
@@ -69,24 +69,24 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint="Enter new password"
+        android:hint="    Enter new password"
         android:inputType="textPersonName"
         android:textColorHint="#ACACAC"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
+        app:layout_constraintBottom_toTopOf="@+id/txt_confirm_password"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="@+id/view" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/txt_confirm_password"
         android:layout_width="281dp"
-        android:layout_height="48dp"
+        android:layout_height="53dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="332dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint="Confirm your new password"
+        android:hint="    Confirm your new password"
         android:inputType="textPersonName"
         android:textColorHint="#ACACAC"
         app:layout_constraintEnd_toEndOf="@+id/view"
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_reset_password"
         android:layout_width="205dp"
         android:layout_height="48dp"
         android:layout_marginStart="49dp"
@@ -108,6 +108,6 @@
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
