--- a/app/src/main/res/layout-sw600dp-land/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_register.xml
@@ -17,7 +17,7 @@
         android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/txt_forgot_password"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/register" />
 
@@ -45,12 +45,12 @@
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/facebook"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:srcCompat="@drawable/facebook" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/facebook"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
@@ -77,7 +77,7 @@
         app:srcCompat="@drawable/twitter" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txt_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="616dp"
@@ -172,7 +172,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txt_sign_up"
         android:layout_width="268dp"
         android:layout_height="44dp"
         android:layout_marginStart="40dp"
@@ -183,7 +183,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/Sign_in"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <TextView
         android:id="@+id/Sign_in"
@@ -194,11 +194,11 @@
         android:text="Sign up"
         android:textColor="@color/color2"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintStart_toEndOf="@+id/txt_sign_up"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <Button
-        android:id="@+id/SignUp"
+        android:id="@+id/btn_signup"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="421dp"
         android:layout_height="46dp"
