--- a/app/src/main/res/layout-sw600dp/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp/activity_register.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/PersonName" />
 
     <Button
-        android:id="@+id/SignUp"
+        android:id="@+id/btn_signup"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="540dp"
         android:layout_height="63dp"
@@ -106,7 +106,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.356"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_sign_up" />
 
     <ImageView
         android:id="@+id/imageView14"
@@ -116,13 +116,13 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="70dp"
         android:backgroundTintMode="add"
-        app:layout_constraintEnd_toStartOf="@+id/imageView5"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintEnd_toStartOf="@+id/google"
+        app:layout_constraintStart_toEndOf="@+id/twitter"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:srcCompat="@drawable/google" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/twitter"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="150dp"
@@ -134,7 +134,7 @@
         app:srcCompat="@drawable/facebook" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/google"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="70dp"
@@ -147,7 +147,7 @@
         app:srcCompat="@drawable/twitter" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txt_sign_up"
         android:layout_width="303dp"
         android:layout_height="54dp"
         android:layout_marginStart="156dp"
@@ -157,7 +157,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <TextView
         android:id="@+id/Sign_in"
@@ -170,8 +170,8 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintStart_toEndOf="@+id/txt_sign_up"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <ImageView
         android:id="@+id/imageView13"
