--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -57,33 +57,33 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="281dp"
-        android:layout_height="53dp"
+        android:id="@+id/txt_new_password"
+        android:layout_width="270dp"
+        android:layout_height="48dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="328dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint=" Enter new password"
+        android:hint="    Enter new password"
         android:inputType="textPersonName"
         android:textColorHint="#ACACAC"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
+        app:layout_constraintBottom_toTopOf="@+id/txt_confirm_password"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="281dp"
+        android:id="@+id/txt_confirm_password"
+        android:layout_width="270dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="390dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint=" Confirm your new password"
+        android:hint="    Confirm your new password"
         android:inputType="textPersonName"
         android:textColorHint="#ACACAC"
         app:layout_constraintEnd_toEndOf="@+id/view"
@@ -91,7 +91,7 @@
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_reset_password"
         android:layout_width="205dp"
         android:layout_height="48dp"
         android:layout_marginStart="49dp"
@@ -105,6 +105,6 @@
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
