--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,16 +8,6 @@
 
 
     <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="399dp"
-        android:layout_height="381dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="-60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/and" />
-
-    <ImageView
         android:id="@+id/imageView4"
         android:layout_width="300dp"
         android:layout_height="300dp"
@@ -31,8 +21,8 @@
 
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="306dp"
+        android:id="@+id/btn_login3"
+        android:layout_width="317dp"
         android:layout_height="54dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/custom_button"
@@ -42,22 +32,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="297dp"
-        android:layout_height="202dp"
-        android:layout_marginStart="-90dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/unknown" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="88dp"
+        android:id="@+id/facebook"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="68dp"
         android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,15 +47,15 @@
         app:srcCompat="@drawable/facebook" />
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/google"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_marginStart="53dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/twitter"
+        app:layout_constraintStart_toEndOf="@+id/facebook"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/google" />
@@ -97,52 +78,48 @@
         android:id="@+id/textView10"
         android:layout_width="199dp"
         android:layout_height="57dp"
-        android:layout_marginStart="161dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginEnd="28dp"
         android:text="@string/textviewlog"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.611"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toTopOf="@+id/imageView8" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="218dp"
         android:layout_height="50dp"
-        android:layout_marginStart="118dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/textviewlog2"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/imageView8" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="217dp"
         android:layout_height="62dp"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="208dp"
-        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="44dp"
         android:text="@string/textviewlog3"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView8"
-        app:layout_constraintHorizontal_bias="0.768"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toTopOf="@+id/imageView8" />
+        app:layout_constraintBottom_toTopOf="@+id/txt_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.917"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txt_sign_up"
         android:layout_width="70dp"
         android:layout_height="28dp"
         android:layout_marginStart="180dp"
@@ -153,12 +130,12 @@
         android:textColor="#FF4F5A"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.397"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login3" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txt_forgot_password"
         android:layout_width="202dp"
         android:layout_height="23dp"
         android:layout_marginTop="4dp"
@@ -167,63 +144,63 @@
         android:textColor="#FF4F5A"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.364"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="280dp"
-        android:layout_height="50dp"
+        android:id="@+id/txt_email"
+        android:layout_width="325dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="340dp"
+        android:background="@drawable/custominput"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/txt_password"
+        android:layout_width="325dp"
+        android:layout_height="48dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/custominput"
         android:ems="10"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
-
-    <EditText
-        android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/custominput"
-        android:ems="10"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_email" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="274dp"
-        android:layout_height="36dp"
+        android:layout_width="150dp"
+        android:layout_height="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="30dp"
         android:text="@string/donthave"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.841"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login3" />
 
     <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/twitter"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="88dp"
+        android:layout_marginEnd="68dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
