--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,13 +12,12 @@
         android:layout_width="304dp"
         android:layout_height="308dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="TODO"
         android:scrollbarTrackHorizontal="@drawable/bb"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.242"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toEndOf="@+id/txt_forgot_password"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/register" />
 
@@ -39,8 +38,8 @@
         android:id="@+id/PersonName"
         android:layout_width="160dp"
         android:layout_height="48dp"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="14dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
@@ -49,11 +48,13 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
+        app:layout_constraintEnd_toStartOf="@+id/LastName"
+        app:layout_constraintHorizontal_bias="0.896"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
-        android:id="@+id/SignUp"
+        android:id="@+id/btn_signup"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="327dp"
         android:layout_height="54dp"
@@ -92,18 +93,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="86dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="86dp"
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text=" use other methods"
         android:textColor="@color/cardview_dark_background"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_sign_up" />
 
     <ImageView
         android:id="@+id/Facebook"
@@ -137,7 +138,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txt_sign_up"
         android:layout_width="189dp"
         android:layout_height="28dp"
         android:layout_marginTop="12dp"
@@ -148,29 +149,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.391"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <TextView
         android:id="@+id/Sign_in"
         android:layout_width="91dp"
         android:layout_height="26dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="80dp"
         android:backgroundTintMode="add"
         android:text="Sign in"
         android:textColor="@color/color2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.195"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/SignUp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/txt_sign_up"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <EditText
         android:id="@+id/LastName"
         android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
@@ -186,7 +186,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txt_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
