--- a/app/src/main/res/layout/activity_success_reset_pass.xml
+++ b/app/src/main/res/layout/activity_success_reset_pass.xml
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_login"
         android:layout_width="207dp"
         android:layout_height="48dp"
         android:layout_marginTop="68dp"
