--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -146,7 +146,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
     <EditText
-        android:id="@+id/PersonName"
+        android:id="@+id/txt_fname"
         android:layout_width="149dp"
         android:layout_height="48dp"
         android:layout_marginTop="44dp"
@@ -171,7 +171,7 @@
         android:inputType="textEmailAddress"
         android:textColorHint="#ACACAC"
         app:layout_constraintStart_toStartOf="@+id/Password"
-        app:layout_constraintTop_toBottomOf="@+id/PersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_fname" />
 
     <EditText
         android:id="@+id/Password"
@@ -187,7 +187,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <EditText
-        android:id="@+id/LastName"
+        android:id="@+id/txt_lname"
         android:layout_width="163dp"
         android:layout_height="48dp"
         android:layout_marginStart="5dp"
@@ -198,11 +198,11 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
-        app:layout_constraintBottom_toBottomOf="@+id/PersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_fname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.036"
-        app:layout_constraintStart_toEndOf="@+id/PersonName"
-        app:layout_constraintTop_toTopOf="@+id/PersonName" />
+        app:layout_constraintStart_toEndOf="@+id/txt_fname"
+        app:layout_constraintTop_toTopOf="@+id/txt_fname" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
