--- a/app/src/main/res/layout-land/activity_details_patient.xml
+++ b/app/src/main/res/layout-land/activity_details_patient.xml
@@ -111,7 +111,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/details" />
+        app:srcCompat="@drawable/hi" />
 
     <TextView
         android:id="@+id/textView24"
