--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -62,7 +62,7 @@
         android:text="Sign Up"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#F2ECF3"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
