--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="color2">#FF4F5A</color>
     <color name="color3">#EEF6FC</color>
     <color name="color4">#FF7364</color>
+    
+    <color name="colorActive">#d4d4d4</color>
 
 </resources>
