--- a/app/src/main/res/layout/activity_details_patient.xml
+++ b/app/src/main/res/layout/activity_details_patient.xml
@@ -14,14 +14,16 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Name"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/txt_blood_type"
@@ -31,14 +33,16 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Blood Type"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_phone"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/txt_phone"
@@ -48,14 +52,17 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Phone"
-        android:inputType="textEmailAddress"
+        android:inputType="phone"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_address" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_address"
+        android:textColor="@color/black"
+        />
 
     <EditText
         android:id="@+id/txt_address"
@@ -65,14 +72,16 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Address"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_name" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_name"
+        android:textColor="@color/black"/>
 
     <ImageView
         android:id="@+id/imageView25"
