--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/component_11__1"
     tools:context=".RegisterActivity">
 
     <ImageView
@@ -25,8 +24,8 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="45dp"
         android:fontFamily="sans-serif"
         android:text="Join"
         android:textColor="@color/black"
@@ -48,7 +47,8 @@
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
         app:layout_constraintStart_toStartOf="@+id/Email"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        android:textColor="@color/black"/>
 
     <Button
         android:id="@+id/btn_signup"
@@ -83,7 +83,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_fname" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_fname"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/textView9"
@@ -96,7 +97,7 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="@string/textviewweb"
-        android:textColor="@color/cardview_dark_background"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
@@ -132,7 +133,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Email" />
+        app:layout_constraintTop_toBottomOf="@+id/Email"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/txt_sign_up"
@@ -182,14 +184,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_fname"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/txt_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="117dp"
         android:fontFamily="sans-serif"
         android:text="Us"
         android:textColor="@color/black"
