--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/component_115__1"
-    tools:context=".RegisterActivity">
+    tools:context=".RegisterActivity"
+    >
 
     <TextView
         android:id="@+id/textView11"
