--- a/app/src/main/res/layout/activity_shared_doc3.xml
+++ b/app/src/main/res/layout/activity_shared_doc3.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="-27dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginEnd="160dp"
         android:transitionName="imagetransaction3"
         app:srcCompat="@drawable/pic3" />
 
@@ -24,15 +24,100 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView5"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-195dp"
         android:layout_marginTop="109dp"
-        android:layout_marginEnd="92dp"
         android:layout_marginBottom="270dp"
+        android:layout_toEndOf="@+id/imageView5"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Ahmed"
+        android:text="Dr. Samar El-Sayed"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:transitionName="nametransaction3" />
+
+    <TextView
+        android:id="@+id/textView37"
+        android:layout_width="145dp"
+        android:layout_height="245dp"
+        android:layout_below="@+id/textView6"
+        android:layout_marginStart="-165dp"
+        android:layout_marginTop="-250dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:text="Internist specialized in Adult Cardiology, Pediatric Cardiology, Adult Gastroenterology and Endoscopy, Adult Kidney, Adult Liver, Adult Diabetes and Endocrinology, General Internal Medicine"
+        android:textColor="@color/gray"
+        android:textSize="16sp"
+        android:transitionName="desctransaction3" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="0dp"
+        app:srcCompat="@drawable/call_icon" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/location_icon" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView7"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/money_icon" />
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView7"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/imageView8"
+        android:text="100 EGP"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="23dp"
+
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="17dp"
+        android:layout_toEndOf="@+id/imageView7"
+        android:text="Agami: Alex-Matrouh Road"
+        android:textColor="@color/black"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView5"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="7dp"
+        android:layout_toEndOf="@+id/imageView"
+        android:text="01204748392"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
 </RelativeLayout>
