--- a/app/src/main/res/layout/activity_shared_doc5.xml
+++ b/app/src/main/res/layout/activity_shared_doc5.xml
@@ -13,7 +13,7 @@
         android:layout_height="365dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="19dp"
         android:layout_marginEnd="162dp"
         android:transitionName="imagetransaction5"
         app:srcCompat="@drawable/pic5" />
@@ -23,14 +23,99 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-200dp"
         android:layout_marginTop="109dp"
-        android:layout_marginEnd="92dp"
+        android:layout_toEndOf="@+id/imageView5"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Ahmed"
+        android:text="Dr. Rania Al-Shall"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:transitionName="nametransaction5" />
+
+    <TextView
+        android:id="@+id/textView38"
+        android:layout_width="315dp"
+        android:layout_height="202dp"
+        android:layout_below="@+id/textView6"
+        android:layout_marginStart="-175dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:text="Consultant of nephrology and kidney transplantation and consultant of pediatric nephrology
+, a nephrologist specialized in general internal medicine, adult nephrology and pediatric nephrology"
+        android:textColor="@color/gray"
+        android:textSize="16sp"
+        android:transitionName="desctransaction5" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/call_icon" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/location_icon" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/imageView7"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="33dp"
+        app:srcCompat="@drawable/money_icon" />
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView7"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/imageView8"
+        android:text="160 EGP"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="23dp"
+
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="17dp"
+        android:layout_toEndOf="@+id/imageView7"
+        android:text="Mansoura: Happy Land Square"
+        android:textColor="@color/black"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView5"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="40dp"
+        android:layout_toEndOf="@+id/imageView"
+        android:text="01153657279"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="normal" />
 </RelativeLayout>
