--- a/app/src/main/res/layout/activity_details_patient.xml
+++ b/app/src/main/res/layout/activity_details_patient.xml
@@ -7,25 +7,6 @@
     tools:context=".DetailsPatientActivity">
 
     <EditText
-        android:id="@+id/txt_name"
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/custominput"
-        android:ems="10"
-        android:hint=" Name"
-        android:inputType="text"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textColorHint="#ACACAC"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16"
-        android:textColor="@color/black"/>
-
-    <EditText
         android:id="@+id/txt_blood_type"
         android:layout_width="280dp"
         android:layout_height="50dp"
@@ -68,20 +49,19 @@
         android:id="@+id/txt_address"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Address"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/black"
         android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_name"
-        android:textColor="@color/black"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <ImageView
         android:id="@+id/imageView25"
@@ -113,7 +93,7 @@
         android:id="@+id/textView16"
         android:layout_width="313dp"
         android:layout_height="35dp"
-        android:layout_marginTop="316dp"
+        android:layout_marginTop="340dp"
         android:text="@string/textview"
         android:textColor="@color/color2"
         android:textSize="18sp"
